<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.duo</groupId>
  <artifactId>duo-harness</artifactId>
  <version>0.2.0</version>
  <packaging>pom</packaging>

  <description>Java 插件化 AI agent harness：内核为自研轻量插件容器，能力以插件组装</description>

  <modules>
    <module>duo-harness-core</module>
    <module>duo-harness-tools</module>
    <module>duo-harness-mcp</module>
    <module>duo-harness-llm</module>
    <module>duo-harness-session</module>
    <module>duo-harness-agent</module>
    <module>duo-harness-web</module>
    <module>duo-harness-example</module>
  </modules>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jackson.version>2.21.2</jackson.version>
    <junit.version>6.0.3</junit.version>
    <slf4j.version>2.0.17</slf4j.version>
    <mcp-sdk.version>0.18.1</mcp-sdk.version>
    <!-- 跟随 mcp-json-jackson2:0.18.1 的 compile 依赖要求（2.0.0）；1.5.0 缺 SDK 所需类 -->
    <networknt.version>2.0.0</networknt.version>
    <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
    <!-- reactor 模式：exec:java 仅在 example 模块启用（其余模块跳过） -->
    <exec.skip>true</exec.skip>
    <!-- 演示入口可切换：-Dexec.mainClass=... 选本模块的其他 Demo（默认 M1 的 DemoMain） -->
    <exec.mainClass>dev.duo.harness.example.DemoMain</exec.mainClass>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- 版本集中在根 pom，子模块不写版本号（duo-project-structure 规范） -->
      <dependency>
        <groupId>com.fasterxml.jackson</groupId>
        <artifactId>jackson-bom</artifactId>
        <version>${jackson.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>io.modelcontextprotocol.sdk</groupId>
        <artifactId>mcp</artifactId>
        <version>${mcp-sdk.version}</version>
      </dependency>
      <!-- 工具输出契约校验（工单 04；票据注明 nexus 已核实、新依赖已获同意） -->
      <dependency>
        <groupId>com.networknt</groupId>
        <artifactId>json-schema-validator</artifactId>
        <version>${networknt.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${slf4j.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.2</version>
          <configuration>
            <!-- 用例内含子进程（MCP 夹具）：卡死要以失败+线程转储呈现，而不是无限挂起 -->
            <forkedProcessTimeoutInSeconds>240</forkedProcessTimeoutInSeconds>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>${exec-maven-plugin.version}</version>
          <configuration>
            <!-- 占位：3.1.0 的 required 参数校验先于 skip，无值即失败；
                 非 example 模块经 exec.skip=true 跳过实际执行 -->
            <mainClass>${exec.mainClass}</mainClass>
            <skip>${exec.skip}</skip>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
